--- a/css/stickyHeader.css
+++ b/css/stickyHeader.css
@@ -5,7 +5,7 @@
     width:100%;
     margin: 0;
     padding: 0;
-    z-index:100;
+    z-index:10000;
 
 
     ul {
